@@ -1,0 +1,14 @@
+#ifndef __MATH_UTUL_H__
+#define __MATH_UTUL_H__
+
+/**
+ * Return greatest common divisor.
+ */
+long long gcd(long, long);
+
+/**
+ * Return greatest common divisor, with rounding of floating point input args.
+ */
+long long gcd(double, double);
+
+#endif
